# inheir.ai

./: .gitmodules  README.md
.github/workflows/: main_server_build.yaml  main_server_deploy.yaml
backend/: .env.sample  Dockerfile  README.md  pyproject.toml
backend/.github/workflows/: main_server_deploy.yaml
backend/data/text/: georgia-property-owner-associate-act.txt  property-tax-guide-for-georgia-citizens.txt
backend/functions/ChatBotFunction/: function_app.py
backend/sample/: letter-of-explanation.txt
backend/src/inheir_backend/: server.py
backend/src/inheir_backend/config/: __init__.py  database.py  environment.py
backend/src/inheir_backend/helpers/: auth.py  filename.py  service.py
backend/src/inheir_backend/middleware/: auth.py
backend/src/inheir_backend/models/: auth.py  case.py  chat.py  report.py
backend/src/inheir_backend/routers/: auth.py  case.py  chatbot.py  gis.py  report.py
backend/src/inheir_backend/routers/api/: v1.py
backend/src/inheir_backend/services/: rag.py  storage.py
backend/src/scripts/: law.py
deployment/: README.md
frontend/: README.md
frontend/src/app/home/report/dashboard/: page.tsx
frontend/src/lib/components/: CreateCaseForm.tsx
inheir-frontend/: README.md  package.json
inheir-frontend/src/app/home/case/[id]/: page.tsx
inheir-frontend/src/lib/components/: Chatbot.tsx  CreateCaseForm.tsx
inheir-frontend/src/lib/validators/: types.ts
