[project]
name = "inheir-backend"
version = "0.1.0"
description = "Backend for InHeir.AI"
authors = [
    {name = "InHeir.AI"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "openai[azure] (>=1.85.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
